--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "browserify": "^16.5.0",
+    "browserify-shim": "^3.8.14",
     "core-js": "^3.3.2",
     "del": "^4.1.0",
+    "domurl": "^2.2.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-csso": "2.0.0",
@@ -13,5 +16,8 @@
     "gulp-uglify": "^3.0.2",
     "node-static": "^0.7.11"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-traceur-cmdline": "^1.3.10"
+  }
 }
