--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
+    "js-cookie": "^2.2.1",
     "node-static": "^0.7.11"
   },
   "devDependencies": {
