--- a/package.json
+++ b/package.json
@@ -21,6 +21,48 @@
     "browser-sync": "^2.26.7",
     "fancy-log": "^1.3.3",
     "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-traceur-cmdline": "^1.3.10"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2017,
+      "ecmaFeatures": {
+        "modules": true
+      }
+    },
+    "plugins": [
+    ],
+    "extends": [
+    ],
+    "env": {
+      "browser": true,
+      "es6": true
+    },
+    "globals": {
+      "expect": false
+    },
+    "rules": {
+      "import/no-unresolved": 0,
+      "import/no-extraneous-dependencies": 0,
+      "import/extensions": 0,
+      "max-len": 0,
+      "no-alert": 0,
+      "no-console": 0,
+      "no-restricted-globals": 0,
+      "no-return-assign": [
+        "error",
+        "except-parens"
+      ],
+      "comma-dangle": [
+        "error",
+        "never"
+      ],
+      "no-underscore-dangle": "off",
+      "class-methods-use-this": 0,
+      "react/jsx-filename-extension": 0,
+      "react/forbid-prop-types": 0
+    }
   }
 }
