--- a/package.json
+++ b/package.json
@@ -32,10 +32,8 @@
         "modules": true
       }
     },
-    "plugins": [
-    ],
-    "extends": [
-    ],
+    "plugins": [],
+    "extends": [],
     "env": {
       "browser": true,
       "es6": true
@@ -43,6 +41,9 @@
     "globals": {
       "expect": false
     },
+    "ignorePatterns": [
+      "node_modules/"
+    ],
     "rules": {
       "import/no-unresolved": 0,
       "import/no-extraneous-dependencies": 0,
